refactor: URLEncoder 인코딩 방식 StandardCharsets.UTF_8로 수정